# bevy-modular-characters

./: Cargo.toml  README.md  shell.nix
assets/: Adventurer.gltf  SciFi.gltf  Soldier.gltf  Witch.gltf
src/: main.rs
src/modular/: components.rs  events.rs  mod.rs
