[package]
name = "snowden_response"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[features]
with-inspector = ["bevy-inspector-egui"]

[dependencies]
paste = "1.0"
bevy = "0.14.2"
bevy-inspector-egui = { version = "0.27.0", optional = true }
